--- a/src/app/pages/edit-event/edit-event.component.html
+++ b/src/app/pages/edit-event/edit-event.component.html
@@ -23,13 +23,13 @@
             type="date"
             formControlName="data_inicio"
             id="especial"
-            value={{dataevent}}
+            placeholder={{dataevent}}
           />
           <input
             type="time"
             formControlName="inicio"
             id="especial"
-            value={{inicioevent}}
+            placeholder={{inicioevent}}
           />
           <input
             formControlName="carga_horaria"
