--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -7,7 +7,7 @@
       <ng-container class="conteudo" *ngFor="let event of evento">
         <div class="item">
           <div class="conteudo-img">
-            <img src="../../../assets/images/teckweek.jpg" alt="Certfacil" />
+            <img src="{{event.img}}" alt="Certfacil" />
           </div>
           <div class="conteudo-textos">
             <h3 class="titulo">{{ event.descricao }}</h3>
