--- a/src/styles.css
+++ b/src/styles.css
@@ -22,3 +22,6 @@ body {
   --grey: #e2e2e2;
   --light-pink: #ffd1e5;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
