--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,22 +4,40 @@
     <app-headermenu></app-headermenu>
     <div class="content">
       <div class="custom-control custom-checkbox">
-        <button id="ativa" name="ativa" (click)="ativos()">Inativo/Ativo</button>
-        <p center>{{texto}}</p>
+        <p class="text" center>{{ texto }}</p>
+
+        <div class="onoffswitch">
+          <input
+            type="checkbox"
+            name="onoffswitch"
+            class="onoffswitch-checkbox"
+            id="myonoffswitch"
+            tabindex="0"
+            verificado
+          />
+          <label
+            class="onoffswitch-label"
+            for="myonoffswitch"
+            id="ativa"
+            name="ativa"
+            (click)="ativos()"
+          >
+            <span class="onoffswitch-inner"> </span>
+            <span class="onoffswitch-switch"> </span>
+          </label>
+        </div>
       </div>
       <ng-container class="conteudo" *ngFor="let event of evento">
-
-        <div class="item" *ngIf="event.ativo===inativo">
+        <div class="item" *ngIf="event.ativo === inativo">
           <div class="conteudo-img">
-            <img src="{{event.img}}" alt="Certfacil" />
+            <img src="{{ event.img }}" alt="Certfacil" />
           </div>
           <div class="conteudo-textos">
             <h3 class="titulo">{{ event.descricao }}</h3>
-            <h5 class="descricao">{{ event.nota }} </h5>
+            <h5 class="descricao">{{ event.nota }}</h5>
             <h4 class="descricao">
               Data: {{ event.data_inicio }}, Horario: {{ event.inicio }}
             </h4>
-
           </div>
           <div class="butons" *ngIf="buttons">
             <div>
