Fix: Correções na pagina de visualização

--- a/src/app/pages/attendancelist/attendancelist.component.html
+++ b/src/app/pages/attendancelist/attendancelist.component.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="conteudo">
       <ng-container class="conteudo" *ngFor="let event of evento">
-        <div class="item">
+        <div class="item" *ngIf="event.ativo === 0">
           <div class="conteudo-img">
             <img src="{{event.img}}" alt="Certfacil" />
           </div>
