--- a/src/app/pages/edit-event/edit-event.component.html
+++ b/src/app/pages/edit-event/edit-event.component.html
@@ -36,6 +36,28 @@
             type="number"
             placeholder="Carga Horaria: {{cargaevent}}"
           />
+          <div class="checkbox">
+            <div>
+              <input
+                type="radio"
+                id="tipo_usuario"
+                name="tipo_usuario"
+                formControlName="ativo"
+                value="0"
+              />
+              <label>Ativar</label>
+            </div>
+            <div>
+              <input
+                type="radio"
+                id="tipo_usuario1"
+                name="tipo_usuario"
+                formControlName="ativo"
+                value="palestrante"
+              />
+              <label>Inativo</label>
+            </div>
+          </div>
           <button class="button" type="submit" (click)="onSubmit()">
             Editar evento
           </button>
