--- a/src/app/pages/edit-event/edit-event.component.scss
+++ b/src/app/pages/edit-event/edit-event.component.scss
@@ -112,3 +112,14 @@ input:focus {
   margin: 0;
   padding: 0;
 }
+.container .form-box form .checkbox input {
+  margin: 0 3px 2px 0;
+}
+.container .form-box form .checkbox label {
+  font-family: "Nunito";
+  font-weight: bold;
+  font-size: 13px;
+  color: #666666;
+  margin: 0;
+}
+
