--- a/src/app/pages/myevents/myevents.component.html
+++ b/src/app/pages/myevents/myevents.component.html
@@ -21,11 +21,11 @@
           </div>
           <div class="butons">
             <div *ngIf="buttonpresenca">
-              <a class="btn-sign-up" (click)="presenca(lib_presenca_1, lib_presenca_2)"
+              <a class="btn-sign-up" (click)="presenca(event.lib_presenca_1, event.lib_presenca_2, event.id)"
               >Confirmar Presença</a> <br>
             </div>
             <div *ngIf="buttondown">
-              <a class="btn-sign-up" (click)="downloadpdf(descricao, carga_horaria, data_inicio, presenca_2, presenca_1)"
+              <a class="btn-sign-up" (click)="downloadpdf(event.descricao, event.carga_horaria, event.data_inicio, event.presenca_2, event.presenca_1)"
               >Download PDF</a>
             </div>
           </div>
