fix: correção de confirma presença e emitir pdf

--- a/src/app/shared/confirm-presenca/confirmpresenca/confirmpresenca.component.html
+++ b/src/app/shared/confirm-presenca/confirmpresenca/confirmpresenca.component.html
@@ -27,7 +27,7 @@
 
     <div class="presenca-container" *ngIf="buttonpresencaone">
       <p>Confirma Presença 1</p>
-      <button type="button" class="btn btn-secondary" (click)="Confirmtwo()">
+      <button type="button" class="btn btn-secondary" (click)="Confirmone()">
         Confirmar
       </button>
     </div>
