--- a/src/app/pages/createevent/createevent.component.html
+++ b/src/app/pages/createevent/createevent.component.html
@@ -1,14 +1,36 @@
 <app-header></app-header>
 <body>
-  <div class="container">
-    <app-headermenu></app-headermenu>
+  <app-headermenu></app-headermenu>
+  <div class="conteudo">
     <div class="form-box">
       <div class="form-content">
         <div>
           <h1 class="name">Vamos criar seu evento</h1>
         </div>
-        <form novalidate [formGroup]="form">
-          <div>
+        <form novalidate [formGroup]="form" >
+          <input
+            type="search"
+            placeholder="Palestrante"
+            list="list"
+            (change)="search($event)"
+          />
+
+          <datalist id="list">
+              <option *ngFor="let userid of user" data-value="{{userid.id}}" value="{{userid.nome}}"></option>
+          </datalist>
+
+          <label for="upload"
+            id="uploadlabel">Upload capa do evento
+            <img src="../../../assets/images/upload.svg" alt="Certfacil" />
+          </label>
+          <input
+            class="upload"
+            type="file"
+            placeholder="Imagem do evento"
+            id="upload"
+            (change)="upload($event)"
+            accept="image/*"
+          />
           <input
             type="text"
             formControlName="descricao"
@@ -33,29 +55,10 @@
             placeholder="Horário"
           />
           <input
-            type="text"
-            formControlName="id_usuario"
-            placeholder="Palestrante"
-            required
-            (keydown)="search($event)"
-          />
-          <input
             formControlName="carga_horaria"
             type="number"
             placeholder="Carga horária"
           />
-          <!-- <label for="upload"
-            >Upload capa do evento
-            <img src="../../../assets/images/upload.svg" alt="Certfacil" />
-          </label>
-          <input
-            class="upload"
-            type="file"
-            placeholder="Imagem do evento"
-            id="upload"
-            (change)="onChange($event)"
-            accept="image/*"
-          /> -->
           <button class="button" type="submit" (click)="onSubmit()">
             Criar evento
           </button>
