--- a/src/app/pages/edit-event/edit-event.component.html
+++ b/src/app/pages/edit-event/edit-event.component.html
@@ -36,28 +36,17 @@
             type="number"
             placeholder="Carga Horaria: {{cargaevent}}"
           />
-          <div class="checkbox">
-            <div>
-              <input
-                type="radio"
-                id="tipo_usuario"
-                name="tipo_usuario"
-                formControlName="ativo"
-                value="0"
-              />
-              <label>Ativar</label>
-            </div>
-            <div>
-              <input
-                type="radio"
-                id="tipo_usuario1"
-                name="tipo_usuario"
-                formControlName="ativo"
-                value="palestrante"
-              />
-              <label>Inativo</label>
-            </div>
-          </div>
+          <input
+          type="text"
+          placeholder="Status"
+          formControlName="ativo"
+          list="ativos"
+          />
+
+          <datalist id="ativos">
+            <option value=0>Ativo</option>
+            <option value="1">Inativo</option>
+        </datalist>
           <button class="button" type="submit" (click)="onSubmit()">
             Editar evento
           </button>
