--- a/src/app/pages/edit-event/edit-event.component.scss
+++ b/src/app/pages/edit-event/edit-event.component.scss
@@ -1,5 +1,7 @@
 .container {
   display: flex;
+  justify-content: space-between;
+  width: 90%;
   margin: 0;
   padding: 0;
 }
@@ -109,13 +111,15 @@ input:focus {
 }
 .container {
   display: flex;
+  justify-content: space-between;
+  width: 90%;
   margin: 0;
   padding: 0;
 }
-.container .form-box form .checkbox input {
+.form-box form .checkbox input {
   margin: 0 3px 2px 0;
 }
-.container .form-box form .checkbox label {
+.form-box form .checkbox label {
   font-family: "Nunito";
   font-weight: bold;
   font-size: 13px;
@@ -123,3 +127,6 @@ input:focus {
   margin: 0;
 }
 
+.form-box .form-content form .checkbox input {
+  margin: 0 3px 2px 0;
+}
