--- a/src/app/pages/edit-event/edit-event.component.scss
+++ b/src/app/pages/edit-event/edit-event.component.scss
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  margin: 0;
+  margin: 0 auto !important;
   padding: 0;
 }
 
@@ -19,7 +19,7 @@
 }
 
 .form-content {
-  margin: 2px auto;
+  margin: 50px auto;
   width: 468px;
   height: 700px;
   background: #ffd1e5;
