--- a/src/app/pages/event/event.component.css
+++ b/src/app/pages/event/event.component.css
@@ -34,6 +34,10 @@ body {
   margin: auto 0;
   display: block;
   object-fit: cover;
+  min-width: 255px;
+  max-width: 255px;
+  min-height: 170px;
+  max-height: 170px;
 }
 
 .content .item .conteudo-textos {
