Fix: line heigth do titulo no index

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,5 +23,11 @@ body {
   --light-pink: #ffd1e5;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
