--- a/src/app/pages/edit-event/edit-event.component.scss
+++ b/src/app/pages/edit-event/edit-event.component.scss
@@ -1,5 +1,8 @@
 .container {
   display: flex;
+  margin: 0 auto !important;
+  justify-content: space-between;
+  width: 90%;
   margin: 0;
   padding: 0;
 }
@@ -19,7 +22,7 @@
 }
 
 .form-content {
-  margin: 2px auto;
+  margin: 50px auto;
   width: 468px;
   height: 700px;
   background: #ffd1e5;
@@ -109,17 +112,24 @@ input:focus {
 }
 .container {
   display: flex;
+  justify-content: space-between;
+  width: 90%;
   margin: 0;
   padding: 0;
 }
-.container .form-box form .checkbox input {
+
+.form-box form .checkbox input {
   margin: 0 3px 2px 0;
 }
-.container .form-box form .checkbox label {
+.form-box form .checkbox label {
   font-family: "Nunito";
   font-weight: bold;
   font-size: 13px;
   color: #666666;
   margin: 0;
+}
+
+.form-box .form-content form .checkbox input {
+  margin: 0 3px 2px 0;
 }
 
