--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -37,6 +37,8 @@
   border-radius: 30px;
 }
 
+
+
 .button {
   padding-left: 5px 10px;
   width: 312px;
@@ -63,6 +65,8 @@
   color: #ffd1e5;
 }
 
+
+
 form input {
   border: none;
   padding-left: 15px;
@@ -77,6 +81,19 @@ form input {
   align-items: center;
   margin: 0 auto 30px auto;
 }
+
+
+form  i {
+z-index: 2;
+position: relative;
+cursor: pointer;
+top: -62px;
+left: 355px;
+color: #666666;
+
+}
+
+
 
 .recover h5 {
   text-align: center;
