--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -5,6 +5,8 @@
       src="../../../assets/images/logo-certfacil.png"
       alt="Logo Certfacil"
     />
+
+    <link rel="stylesheet"  href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </a>
 </header>
 
@@ -13,7 +15,6 @@
     <div>
       <h1 class="name">Acesse sua conta</h1>
     </div>
-
     <form novalidate [formGroup]="form">
       <input
         id="email"
@@ -23,16 +24,23 @@
         formControlName="email"
         required
       />
-      <input
-        id="password"
-        type="password"
-        formControlName="password"
-        placeholder="Senha"
-        formControlName="password"
-        required
-      />
+        <input
+         id="password"
+         type="password"
+         formControlName="password"
+         placeholder="Senha"
+         formControlName="password"
+         required
+         [type]= "hide ? 'password': 'text' "
+        >
+         <i class="material-icons" matSuffix (click) = "hide = !hide">
+           {{  hide ? 'visibility' : 'visibility_off'}}
+         </i>
+
+      </form>
+
+
       <button class="button" type="submit" (click)="onSubmit()">Entrar</button>
-    </form>
     <div class="recover">
       <h5>
         Esqueceu sua senha?
