--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -194,8 +194,10 @@
           </div>
 
           <div class="checkbox-termo">
+
             <input type="checkbox" id="scales" name="scales" class="checkbox" />
             <label for="scales"
+              requerid
               >Concordo com os
               <a
                 href="https://s3-sa-east-1.amazonaws.com/raizen-prod/items-files/item-189-tcg.pdf"
