Fix: Correção no layout do PDF

--- a/src/app/shared/pdf/pdf.component.html
+++ b/src/app/shared/pdf/pdf.component.html
@@ -4,15 +4,15 @@
     src="../../../assets/images/logo-ftc.png"
     alt="Ftc Logo"
   />
-  <h3>Certificado de Participação</h3>
-  <h1>II ciclo de oficinas</h1>
+  <h3>Certificado de Participação</h3><br>
+  <h1>II ciclo de oficinas</h1><br>
   <span
     ><img src="../../../assets/images/game.png" alt="icon game" />2021.1</span
   >
   <h4>Certificamos que</h4>
   <h5 class="nome-participante">{{ nome }}</h5>
   <h5>
-    participou do 2º Ciclo de Oficinas em Sistemas de Informação:
+    participou do 2º Ciclo de Oficinas em Sistemas de Informação:<br><br>
     <strong>{{ descricao }}</strong
     >, com carga horária de {{ carga_horaria }}h.
   </h5>
