Fix: Verificação de check list do termo de uso do sistema

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -204,7 +204,7 @@
 
           <div class="checkbox-termo">
 
-            <input type="checkbox" id="scales" name="scales" class="checkbox" />
+            <input type="checkbox" id="termo" class="checkbox" (click)="validtermo()"/>
             <label for="scales"
 
               >Concordo com os
